Move 2017 puzzles to separate project

--- a/y17/pom.xml
+++ b/y17/pom.xml
@@ -8,14 +8,22 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>nl.nibsi.aoc</groupId>
-  <artifactId>core</artifactId>
+  <artifactId>y17</artifactId>
   <version>0.1.0</version>
-  
-  <name>Advent of Code</name>
+
+  <name>Year 2017</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>nl.nibsi.aoc</groupId>
+      <artifactId>core</artifactId>
+      <version>0.1.0</version>
+    </dependency>
+  </dependencies>
 </project>
