Rename new year archetype

--- a/new-year-archetype/pom.xml
+++ b/new-year-archetype/pom.xml
@@ -13,8 +13,8 @@
     <version>0.1.0</version>
   </parent>
 
-  <artifactId>year-archetype</artifactId>
+  <artifactId>new-year-archetype</artifactId>
 
-  <name>Year Archetype</name>
+  <name>New Year Archetype</name>
   
 </project>
