--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /core/target/
-/exe/target/
-/new-year-archetype/target/
-/swing/target/
-/y17/target/
-/y18/target/
+/puzzles/puzzle-runner-exe/target/
+/puzzles/puzzle-runner-swing/target/
+/puzzles/puzzle-year-2017/target/
+/puzzles/puzzle-year-archetype/target/
+/puzzle-testing/target/
