--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>nl.nibsi.aoc</groupId>
-  <artifactId>parent</artifactId>
+  <artifactId>advent-of-code</artifactId>
   <version>0.1.0</version>
   <packaging>pom</packaging>
 
@@ -30,18 +30,29 @@
 
       <dependency>
         <groupId>nl.nibsi.aoc</groupId>
-        <artifactId>swing</artifactId>
+        <artifactId>puzzle-testing</artifactId>
         <version>${project.version}</version>
+        <scope>test</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-library</artifactId>
+        <version>1.3</version>
+      </dependency>
+
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
   
   <modules>
     <module>core</module>
-    <module>swing</module>
-    <module>exe</module>
-    <module>y17</module>
-    <module>y18</module>
-    <module>new-year-archetype</module>
+    <module>puzzles</module>
+    <module>puzzle-testing</module>
   </modules>
 </project>
