--- a/puzzle-testing/pom.xml
+++ b/puzzle-testing/pom.xml
@@ -19,7 +19,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>nl.nibsi.aoc</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
     </dependency>
 
