--- a/puzzles/puzzle-year-2017/pom.xml
+++ b/puzzles/puzzle-year-2017/pom.xml
@@ -19,12 +19,12 @@
 
   <dependencies>
     <dependency>
-      <groupId>nl.nibsi.aoc</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>nl.nibsi.aoc</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>puzzle-testing</artifactId>
     </dependency>
   </dependencies>
